# dictate

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
scripts/: cat_demo.py  check_permissions.py
src/dictate/: app.py  cleaner.py  commands.py  hotkey.py  inserter.py  overlay.py  permissions.py  recorder.py  transcriber.py
tests/: test_app.py  test_cleaner.py  test_commands.py  test_hotkey.py  test_inserter.py  test_overlay.py  test_recorder.py  test_transcriber.py
