[project]
name = "dictate"
version = "0.1.0"
description = "Local Wispr Flow-style dictation for macOS: hold Right Cmd, speak, release."
requires-python = ">=3.11"
dependencies = [
    "parakeet-mlx>=0.3.5",
    "sounddevice>=0.5.1",
    "pynput>=1.7.7",
    "rumps>=0.4.0",
    "numpy>=1.26",
    # librosa (via parakeet-mlx) needs numba; old numba versions don't build on 3.13
    "numba>=0.61",
    "mlx-lm>=0.24",
    # mlx-lm is not yet compatible with transformers v5
    "transformers<5",
]

[project.scripts]
dictate = "dictate.app:main"
wispr = "dictate.app:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: model-dependent integration tests (need cached models)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dictate"]
